k8s/apps/dama-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dama-web
  namespace: prodesk
spec:
  type: ClusterIP
  selector:
    app: dama-web
  ports:
  - port: 3000
    targetPort: 3000
